# runit

./: DEPLOYMENT_CHECKLIST.md  PHASE9_COMPLETE.md  PHASE9_SECURITY.md  README.md  SECURITY_REFERENCE.txt  SETUP_PHASE10.md  index.js  package.json  test_security.sh
provider/: .env  .env.example  provider_agent.py  requirements.txt
provider/docker/: Dockerfile
provider/workspace/: README.md
provider/workspace/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
provider_app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
provider_app/src/: App.tsx  styles.css
provider_app/src-tauri/: Cargo.toml  tauri.conf.json
provider_app/src/routes/: Dashboard.tsx  SetupWizard.tsx
renter/: renter.html
server/: .env  .env.example  README.md  index.js  index_v2.js  package-lock.json  package.json
server/db/: connection.js  migrate.js  schema.sql
server/db/migrations/: 001_initial_schema.sql  002_session_locking.sql  003_cleanup_flag.sql  004_add_last_status_change.sql
server/public/: renter.html
