[package]
name = "provider-app"
version = "0.0.1"
edition = "2021"
description = "Runit provider desktop shell"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
